css/virtualtour.css
/* Basic sections */

body {
    /*background-color: #000000;*/
}

body, html {
  height: 100%;
}

.active {
  background-color: #222;
}

ul.horizontal-list li {
  display: block;
  padding-right:10px;
  border-right: 1px solid #fff;
}

ul.horizontal-list li:last-child {
  border-right: 0px;
  padding-right:inherit;
}

@media only screen and (min-width: 480px) {
  ul.horizontal-list li {
    display: inline;
  }
}


/*************************************************************************************/
/** SCROLLBAR: Removed for now. Research shows users confused without arrow button ***/
/*************************************************************************************/

/* Rectangular Scrollbar */
/*body::-webkit-scrollbar, #map-container::-webkit-scrollbar {
    width: 1em;
}

body::-webkit-scrollbar-track, #map-container::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    background-color: #222;
}

body::-webkit-scrollbar-thumb, #map-container::-webkit-scrollbar-thumb {
  background-color: white;
  outline: 1px solid slategrey;
}

body::-webkit-scrollbar-button, #map-container::-webkit-scrollbar-button {
  background-color:slategrey;
  color:white;
  outline: 1px solid black;
}*/

/* Rounded scrollbar */
/*#map-container::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #F5F5F5;
}

#map-container::-webkit-scrollbar
{
	width: 10px;
	background-color: #F5F5F5;
}

#map-container::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #555;
}*/

/****************************************/
/** PAGE TEXT: Underneath pano header ***/
/****************************************/

#pagetext {
  color:#fff;
	/*padding-left: 20px;
	padding-right:20px;*/
  padding-bottom: 24px;
	text-align: center;
}

#pagetext .heading {
  text-align: center;
}

#pagetext .heading-item {
  padding-left: 10px;
  padding-right: 10px;
  display:block;
}

#pagetext .heading-item:first-child {
  border-right: 0px;
}

@media only screen and (min-width: 480px) {

  #pagetext .heading-item {
    display: inline-block;
  }

  #pagetext .heading-item:first-child {
    border-right: 1px solid #222;
  }
}

/* Image map */

#map-container {
    position: relative;
    overflow-x:auto;
    overflow-y:hidden;
    background-color: #222222;
}

#inner {
    position: relative;
    width: -webkit-min-content;
    width: -moz-min-content;
    width: min-content;
    min-height:450px;
    margin-left:auto;
    margin-right:auto;
}

/* Map navigation arrows */

.arrow-nav .w3-button {
    position: absolute;
    width: 50px;
    height: 50px;
}

.nav-left {
    left: 20px;
    top: 70%;
}

.nav-right {
    right: 20px;
    top: 70%;
}

.nav-westfromstage {
    left: 100px;
    top: 50%;
}

/* Footer */
footer {
  text-align: center;
}


/* Image modals */

#art-modal {
  padding-top: 20px;
  /*padding-bottom: 10px;*/

}

#art-modal #art-modal-dialog {
  /*max-width: 650px;*/

}


#art-modal-dialog .art-modal-img-container {
  max-height: calc(100vh - 125px);
}

@media only screen and (min-width:480px) {
  #art-modal-dialog .art-modal-img-container {
    overflow-y: scroll;
  }
}


#art-modal-dialog-responsive {
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

#art-modal-dialog-responsive .art-modal-img-container {
}

#art-modal-dialog #art-modal-img,
#art-modal-dialog-responsive #art-modal-img {
  width:100%
}

@media only screen and (min-width:480px) {
  #art-modal-dialog #art-modal-img {
    width:70%
  }
}

@media only screen and (min-width:480px) {
  #art-modal-dialog-responsive #art-modal-img {
    max-height: calc(100vh - 125px);
    width:auto;
  }
}

.bgimg {
    /* The image used */
    background-image: url("../img/works/November_Still_Life.jpg");

    /* Full height */
    height: 100%;

    /* Center and scale the image nicely */
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    background-blend-mode: lighten;
}

